--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,452 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Crazybaby | Futuristic speaker</title>
+    <link rel="icon" href="./images/icons_svg/favicon_crazyB_32.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page">
+    <header class="header">
+      <div class="header__actions">
+        <a href="#" class="header__logo-link">
+          <img
+            class="header__logo"
+            src="./images/icons_svg/01_logo_header.svg"
+            alt="crazybaby logo"
+          >
+        </a>
+        <a href="#menu" class="header__menu-icon"></a>
+      </div>
+
+      <div class="header__items">
+        <a href="#" class="header__specs-link">
+          Specs
+        </a>
+
+        <div class="header__language-items">
+          <a href="#" class="header__language-en">EN</a>
+          <a href="#" class="header__language-ua">/UA</a>
+        </div>
+
+        <a
+          href="#"
+          class="header__button-buy"
+        >
+          Buy
+        </a>
+      </div>
+    </header>
+
+    <nav class="mobile-menu page__mobile-menu" id="menu">
+      <div class="mobile-menu__container">
+        <div class="mobile-menu__content">
+          <div class="mobile-menu__actions">
+            <a href="#" class="mobile-menu__logo-link">
+              <img
+                class="mobile-menu__logo"
+                src="./images/icons_svg/01_logo_header.svg"
+                alt="crazybaby logo"
+              >
+            </a>
+
+            <a href="#" class="mobile-menu__icon"></a>
+          </div>
+
+          <ul class="mobile-menu__list">
+            <li class="mobile-menu__item">
+              <a href="#our-story" class="mobile-menu__link">Our story</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a href="#about-us" class="mobile-menu__link">About us</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a href="#technology" class="mobile-menu__link">Technology</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a href="#features" class="mobile-menu__link">Features</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a href="#get-in-touch" class="mobile-menu__link">Get in touch</a>
+            </li>
+          </ul>
+
+          <div class="mobile-menu__link-box">
+            <a
+              class="footer__link footer__link--facebook"
+              href="https://www.facebook.com/hicrazybaby/"
+              target="_blank"
+              rel="noopener"
+            >
+            </a>
+
+            <a
+              class="footer__link footer__link--twitter"
+              href="https://twitter.com/crazybabyaudio"
+              target="_blank"
+              rel="noopener"
+            >
+            </a>
+
+            <a
+              class="footer__link footer__link--instagram"
+              href="https://www.instagram.com/crazybaby/"
+              target="_blank"
+              rel="noopener"
+            >
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main class="content">
+      <section class="product-poster content__product-poster">
+        <div class="product-poster__image-box"></div>
+
+        <div class="product-poster__content">
+          <h1 class="product-poster__title">
+            Futuristic
+            <br>
+            Wireless
+            <br>
+            Speaker
+          </h1>
+
+          <p class="product-poster__description">
+            Luna’s performance is balanced and smooth in all frequency ranges which makes the music both naturally pleasant and distinctly more layered.
+          </p>
+        </div>
+      </section>
+
+      <section class="menu content__menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link menu__link--is-active">Our story</a>
+          </li>
+          <li class="menu__item">
+            <a href="#about-us" class="menu__link">About us</a>
+          </li>
+          <li class="menu__item">
+            <a href="#technology" class="menu__link">Technology</a>
+          </li>
+          <li class="menu__item">
+            <a href="#features" class="menu__link">Features</a>
+          </li>
+          <li class="menu__item">
+            <a href="#get-in-touch" class="menu__link">Get in touch</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="benefits content__benefits" id="our-story">
+        <div class="container">
+          <div class="grid benefits__grid">
+            <div class="benefits__benefit grid__item--on-tablet-1-4 grid__item--on-desktop-1-3">
+              <div class="benefits__icon-box">
+                <img
+                  class="benefits__icon"
+                  src="./images/icons_svg/02_icon_1.svg"
+                  alt="Futuristic design icon"
+                >
+              </div>
+
+              <h3 class="benefits__title">Futuristic design</h3>
+
+              <p class="benefits__text">
+                To give Luna a truly flawless look, we specifically picked aircraft grade aluminum as its material and adopted both three-dimensional stretch-bending technology and a high precision cold forging technique.
+              </p>
+            </div>
+
+            <div class="benefits__benefit grid__item--on-tablet-5-8 grid__item--on-desktop-4-6">
+              <div class="benefits__icon-box">
+                <img
+                  class="benefits__icon"
+                  src="./images/icons_svg/03_icon_2.svg"
+                  alt="Speaker system icon"
+                >
+              </div>
+
+              <h3 class="benefits__title">Tweeter speaker system</h3>
+
+              <p class="benefits__text">
+                To deliver a more layered sound performance better than a sole full-range speaker, our team equipped Luna with one more tweeter speaker responsible for high-frequency sound independently.
+              </p>
+            </div>
+
+            <div class="benefits__benefit grid__item--on-tablet-1-4 grid__item--on-desktop-7-9">
+              <div class="benefits__icon-box">
+                <img
+                  class="benefits__icon"
+                  src="./images/icons_svg/04_icon_3.svg"
+                  alt="Multiroom system icon"
+                >
+              </div>
+
+              <h3 class="benefits__title">Multiroom system</h3>
+
+              <p class="benefits__text">
+                Luna is natively compatible with your home Wi-Fi. Set up multiple speakers in different rooms to expand your music experience into the entire house.
+              </p>
+            </div>
+
+            <div class="benefits__benefit grid__item--on-tablet-5-8 grid__item--on-desktop-10-12">
+              <div class="benefits__icon-box">
+                <img
+                  class="benefits__icon"
+                  src="./images/icons_svg/05_icon_4.svg"
+                  alt="Lighting system icon"
+                >
+              </div>
+
+              <h3 class="benefits__title">Intuitive lighting system</h3>
+
+              <p class="benefits__text">
+                An intuitive user interface allows you to adjust the hue and saturation of color for lighting that fits any mood and situation.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="presentation content__presentation">
+        <video
+          class="presentation__video"
+          poster="./images/photos_png/02_video_poster_2x1.png"
+          preload="metadata"
+          src="./video/video_Luna-by-crazybaby.mp4"
+       ></video>
+
+        <div class="presentation__button presentation__button--start">
+          <img
+            class="presentation__button-icon"
+            src="./images/icons_svg/video_play.png"
+            alt="video play icon"
+          >
+        </div>
+
+        <div class="presentation__button presentation__button--stop">
+          <img
+          class="presentation__button-icon"
+          src="./images/icons_svg/video_stop.png"
+          alt="video stop icon"
+          >
+        </div>
+      </section>
+
+      <section class="about-us content__about-us" id="about-us">
+        <div class="container">
+          <div class="grid">
+            <h2 class="about-us__title grid__item--on-tablet-4-8 grid__item--on-desktop-7-12">
+              Designed for
+              <br>
+              the future
+            </h2>
+
+            <div class="about-us__image-box">
+              <img
+                class="about-us__image"
+                src="./images/photos_png/03_designed_for_future.png"
+                alt=""
+              >
+            </div>
+
+            <div class="about-us__info grid__item--on-tablet-5-8 grid__item--on-desktop-8-11">
+              <p class="about-us__text">
+                In 2014, a group of geeky industrial designers, engineering veterans and acoustic experts formed crazybaby. This is a bunch of passionate people who are crazy enough to think they can challenge the industry with disruptive audio products.
+              </p>
+              <a href="#" class="about-us__link">
+                See more about us
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="technology content__technology" id="technology">
+        <div class="container">
+          <h2 class="technology__title">Technology</h2>
+
+          <img
+            class="technology__image"
+            src="./images/photos_png/04_technology.png"
+            alt="technology image"
+          >
+        </div>
+      </section>
+
+      <section class="testimonials content__testimonials container">
+        <div class="testimonials__item">
+          <p class="testimonials__text">
+            “It really took me by surprise honestly to have such full beautiful sound that coming out of this small compact device. And with the brush aluminum surface, it feels so familiar. Like my iPhone.”
+          </p>
+
+          <img
+            src="./images/photos_png/05_director_face.png"
+            alt="Garrett Martin photo"
+            class="testimonials__image"
+          >
+
+          <a
+            class="testimonials__name"
+            href="https://www.instagram.com/garett._.martin/"
+            target="_blank"
+            rel="noopener"
+          >
+            Garrett Martin
+          </a>
+
+          <p class="testimonials__role">Creative Director</p>
+        </div>
+      </section>
+
+      <section class="features content__features" id="features">
+        <div class="container">
+          <h2 class="features__title">Features</h2>
+
+          <div class="features__grid grid container">
+            <div class="features__item grid__item--on-tablet-4-8 grid__item--on-desktop-6-12">
+              <div class="features__subtitle">
+                Sound & Music
+              </div>
+
+              <ul class="features__list">
+                <li class="features__list-item">Feel-in-chest Base Power</li>
+                <li class="features__list-item">Lossless Digital Audio Transmission</li>
+                <li class="features__list-item">Easy & Stable Stereo Pairing</li>
+                <li class="features__list-item">Crisp and Clear High Frequency Sound</li>
+                <li class="features__list-item">Streams from Cloud Music and Local Library</li>
+                <li class="features__list-item">Auto Music Playback from Last Song Stopped</li>
+              </ul>
+            </div>
+
+            <div class="features__item grid__item--on-tablet-1-5 grid__item--on-desktop-2-12">
+              <div class="features__subtitle">
+                Connectivity
+              </div>
+
+              <ul class="features__list">
+                <li class="features__list-item">Hands Free Wireless Audio</li>
+                <li class="features__list-item">Bluetooth 4.0 LE</li>
+                <li class="features__list-item">Wi-Fi 2.4 GHz (802.11 b/g/n)</li>
+                <li class="features__list-item">Smart Multiroom System Set Up</li>
+                <li class="features__list-item">Party Mode with 6.0 Units and above</li>
+                <li class="features__list-item">Powerful MESHNET Multi Speaker Network</li>
+              </ul>
+            </div>
+
+            <div class="features__item grid__item--on-tablet-3-6 grid__item--on-desktop-4-12">
+              <div class="features__subtitle">
+                App Features
+              </div>
+
+              <ul class="features__list">
+                <li class="features__list-item">Customize Music Scheduler</li>
+                <li class="features__list-item">Wake Up with Favorite Songs</li>
+                <li class="features__list-item">Home Detection Auto Wake Up</li>
+                <li class="features__list-item">Color Wheel & Saturation Change</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="features__slider slider">
+            <div class="slider__buttons">
+              <button class="slider__button slider__button-left"></button>
+              <button class="slider__button slider__button-right"></button>
+            </div>
+            <div class="slider__numbers">
+              <span class="slider__number-active">
+                01
+              </span>
+              <span class="slider__slash">
+                /
+              </span>
+              <span class="slider__number-disactive">
+                03
+              </span>
+            </div>
+          </div>
+
+          <div class="features__image-box">
+            <div class="features__image"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="questions content__questions container" id="get-in-touch">
+        <div class="grid">
+          <h2 class="questions__title grid__item--on-tablet-1-4 grid__item--on-desktop-2-6">
+            Do you have any
+            <br>
+            questions?
+          </h2>
+
+          <div class="questions__form-box grid__item--on-tablet-5-8 grid__item--on-desktop-8-12">
+            <form action="#">
+              <input
+                class="questions__form-field"
+                name="email"
+                type="email"
+                placeholder="Your email"
+                required
+              >
+              <textarea
+                class="questions__form-field questions__form-field--textarea"
+                name="message"
+                placeholder="Your message..."
+                required
+             ></textarea>
+
+              <button class="questions__button" type="submit">Send</button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer container">
+      <div class="footer__links-box">
+        <a href="#" class="footer__link-up">
+          <img src="./images/icons_svg/07_icon_Up-to-header.svg" alt="arrow up image">
+        </a>
+
+        <a class="footer__logo" href="#">
+          <img
+            src="./images/icons_svg/01_logo_header.svg"
+            alt="crazybaby logo"
+          >
+        </a>
+
+        <a
+          class="footer__link footer__link--facebook"
+          href="https://www.facebook.com/hicrazybaby/"
+          target="_blank"
+          rel="noopener"
+        >
+        </a>
+
+        <a
+          class="footer__link footer__link--twitter"
+          href="https://twitter.com/crazybabyaudio"
+          target="_blank"
+          rel="noopener"
+        >
+        </a>
+
+        <a
+          class="footer__link footer__link--instagram"
+          href="https://www.instagram.com/crazybaby/"
+          target="_blank"
+          rel="noopener"
+        >
+        </a>
+      </div>
+
+      <p class="footer__text">
+        © 2019 All rights reserved. Terms of Use & Privacy Policy
+      </p>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
